XML parameter entity parsing rules

--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -221,8 +221,8 @@ initially <i>null</i>.
 <!-- Not defined in XML5 -->
 <dt>U+0025 PERCENT SIGN (%)
 <dd>
-  <p>Set the <span>original state</span> to the <span>DTD
-  state</span>.
+  <p>Set a U+0025 PERCENT SIGN character (%) to the <span>temporary
+  buffer</span>.
   <p>Switch to the <span>parameter entity name in DTD state</span>.
 
 <dt>U+005D RIGHT SQUARE BRACKET (])
@@ -241,7 +241,9 @@ initially <i>null</i>.
 
 <dt>EOF
 <dd>
-  <!-- XXX Unless internal subset -->
+  <p>If the parser was originally created as part of the <span>XML
+  fragment parsing algorithm</span>, emit an <span>end-of-file
+  token</span> and abort these steps.
   <p>Set the <span>DTD mode</span> to <i>N/A</i>.
   <p>Switch to the <span>data state</span>.
   <p>Emit an <span>end-of-DOCTYPE token</span>.
