--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -150,6 +150,7 @@ initially <i>null</i>.
 <!-- Not in XML5 -->
 <dt>U+0000 NULL
 <dd>
+  <p><span>Parse error</span>.
   <p>Append a U+FFFD REPLACEMENT CHARACTER character to the current
   token's <i>data</i>.
 
