XML entity parsing

--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -221,6 +221,20 @@
 
 </dl>
 
+<h1><span>After attribute name state</span></h1>
+
+<dl class=switch>
+
+<dt><span>Uppercase ASCII letter</span>
+<dd>
+  <p><span>Parse error</span>.
+  <p>Start a new attribute in the current tag token.  Set that
+  attribute's name to the <span>current input character</span>, and
+  its value to the empty string.  Switch to the <span>attribute name
+  state</span>.
+
+</dl>
+
 <h1><span>Attribute value (double-quoted) state</span></h1>
 
 <dl class=switch>
