--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -37,9 +37,8 @@
   <p><span>Parse error</span>.<!-- No error in XML5.  (Parse error
   in this document to support XML1.) -->
   <p>Switch to the <span>data state</span>.
-  <p>Create a new <span>end tag token</span>.
-  <p>Set its <i>tag name</i> to the empty string.
-  <p>Emit the <span>current tag token</span>.
+  <p>Emit a U+003C LESS-THAN SIGN character token.
+  <p>Reconsume the <span>current input character</span>.
 
 <!-- Not in XML5 -->
 <dt>U+0000 NULL
@@ -124,8 +123,9 @@ state</span>.
 <p>Otherwise, if the next seven characters are a
 <span>case-sensitive</span> match for the string "[CDATA[" (the five
 uppercase letters "CDATA" with a U+005B LEFT SQUARE BRACKET character
-before and after), then consume those characters and switch to the
-<span>CDATA section state</span>.
+before and after), then: if the <span>stack of open elements</span> is
+empty, <span>parse error</span>; consume those characters; and switch
+to the <span>CDATA section state</span>.
 
 <p>Otherwise, this is a <span>parse error</span>. Switch to
 the <span>bogus comment state</span>. The next character that is
@@ -168,6 +168,7 @@ consumed, if any, is the first character that will be in the comment.
 <!-- Not in XML5 -->
 <dt>U+0000 NULL
 <dd>
+  <p><span>Parse error</span>.
   <p>Append a U+FFFD REPLACEMENT CHARACTER character to the current
   token's <i>name</i>.<!-- Not in XML5 -->
 
