--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -72,10 +72,8 @@
 <dt>EOF
 <dd>
   <p><span>Parse error</span>.
-  <p>Emit a U+003C LESS-THAN SIGN (&lt;) character token.
-  <p>Emit a U+002F SOLIDUS (/) character token.
-  <p>Switch to the <span>data state</span>.
-  <p>Reconsume the <span>current input character</span>.
+  <!-- different from XML5 for compat with HTML -->
+  <p>Switch to the <span>bogus comment state</span>.
 
 <dt>U+003E GREATER-THAN SIGN (>)
 <dd>
