--- a/src/xml-tree-construction.html
+++ b/src/xml-tree-construction.html
@@ -54,6 +54,9 @@ agent <em class=rfc2119>MUST</em> handle the token as follows:
       <li>Pop all the nodes from the <span>current node</span> up to
       <var>node</var>, including <var>node</var>, then stop these steps.
       </ol>
+    <li>Otherwise, if <var>node</var> is the topmost node of
+    the <span>stack of open elements</span>, this is a <span>parse
+    error</span>; Ignore the token, and abort these steps.
     <li><p>Set <var>node</var> to the previous entry in
     the <span>stack of open elements</span>.
     <li><p>Return to the step labeled <i>loop</i>.
