--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -473,7 +473,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p><span>Validate an entity reference name</span>.
+  <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (double-quoted) state</span>.
   <p>Reconsume the <span>current input character</span>.
@@ -503,7 +503,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p><span>Validate an entity reference name</span>.
+  <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (single-quoted) state</span>.
   <p>Reconsume the <span>current input character</span>.
@@ -533,7 +533,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p><span>Validate an entity reference name</span>.
+  <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value in entity state</span>.
   <p>Reconsume the <span>current input character</span>.
