--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -228,10 +228,7 @@ initially <i>null</i>.
 
 <dt>U+005D RIGHT SQUARE BRACKET (])
 <dd>
-  <p>If the <span>DTD mode</span> of the parser is <i>internal
-  subset</i>, switch to the <span>after DOCTYPE internal subset
-  state</span>.
-  <p>Otherwise, switch to the <span>in DTD msc state</span>.
+  <p>Switch to the <span>after DOCTYPE internal subset state</span>.
 
 <dt>U+0009 CHARACTER TABULATION (tab)
 <dt>U+000A LINE FEED (LF)
@@ -258,7 +255,7 @@ initially <i>null</i>.
 </dl>
 
 <h1><dfn>After DOCTYPE internal subset state</dfn></h1>
-<!-- DOCTYPE internal subset after state in XML5 -->
+<!-- DOCTYPE internal subset after state in XML5 (but has different definition) -->
 
 <p>Consume the <span>next input character</span>:
 
@@ -266,24 +263,33 @@ initially <i>null</i>.
 
 <dt>U+003E GREATER-THAN SIGN (>)
 <dd>
+  <p>If the parser was originally created as part of the <span>XML
+  fragment parsing algorithm</span>, this is a <span>parse
+  error</span> <ins>(offset=1)</ins>; switch to the <span>DTD
+  state</span> and abort these steps.
   <p>Set the <span>DTD mode</span> to <i>N/A</i>.
   <p>Switch to the <span>data state</span>.
   <p>Emit an <span>end-of-DOCTYPE token</span>.
+
+<dt>U+005D RIGHT SQUARE BRACKET (])
+<dd>
+  <p>Switch to the <span>after DTD msc state</span>.
 
 <dt>EOF
 <dd>
   <p><span>Parse error</span>.
-  <p>Set the <span>DTD mode</span> to <i>N/A</i>.
-  <p>Switch to the <span>data state</span>.
-  <p>Emit an <span>end-of-DOCTYPE token</span>.
+  <p>Switch to the <span>DTD state</span>.
   <p>Reconsume the <span>current input character</span>.
 
 <dt>Anything else
 <dd>
-  <p><span>Parse error</span>.<!-- Not in XML5 -->
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
+  <p>If the parser was originally created as part of the <span>XML
+  fragment parsing algorithm</span>, switch to the <span>DTD
+  state</span> and abort these steps.
   <p>Set the <span>DTD mode</span> to <i>N/A</i>.
   <p>Switch to the <span>bogus after DOCTYPE internal subset
-  state</span>.<!-- Not in XML5 -->
+  state</span>.
 
 </dl>
 
@@ -349,10 +355,10 @@ initially <i>null</i>.
 <dd>
   <p>If the <i>DTD mode</i> of the parser is <em>not</em> <i>internal
   subset</i>, switch to the <span>after mss state</span>.
-  <p>Otherwise, this is a <span>parse error</span>. Switch to
-  the <span>DOCTYPE bogus comment state</span>. The next character
-  that is consumed, if any, is the first character that will be in the
-  comment.
+  <p>Otherwise, this is a <span>parse error</span>.  Create a marked
+  section whose status is <i>IGNORE</i> and push it onto
+  the <span>stack of open marked sections</span>.  Switch to
+  the <span>ignored section state</span>.
 
 <dt>Anything else
 <dd>
