--- a/src/tokenizer/charrefs-xml-replace.html
+++ b/src/tokenizer/charrefs-xml-replace.html
@@ -19,7 +19,7 @@
 <dt>U+0027 APOSTROPHE (')
 <dt>U+0060 GRAVE ACCENT (`)
 <dt>U+0025 PERCENT SIGN (%)
-<dt>U+0023 NUMBER SIGN (#)
+<!--<dt>U+0023 NUMBER SIGN (#)-->
 <dt>The <span>additional allowed character</span>, if there is one
 
 <dd>
@@ -84,7 +84,7 @@
 <dt>U+0020 SPACE
 <dt>U+003C LESS-THAN SIGN (&lt;)
 <dt>U+0026 AMPERSAND (&amp;)
-<dt>U+003D EQUALS SIGN (=)
+<!--<dt>U+003D EQUALS SIGN (=)-->
 <dt>U+003E GREATER-THAN SIGN (>)
 <dt>U+0022 QUOTATION MARK (&quot;)
 <dt>U+0027 APOSTROPHE (')
