--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -462,13 +462,6 @@ initially <i>null</i>.
 
 <dl class=switch>
 
-<dt><span>Uppercase ASCII letter</span>
-<dt><span>Lowercase ASCII letter</span>
-<dt><span>ASCII digit</span>
-<dd>
-  <p>Append the <span>current input character</span> to
-  the <span>temporary buffer</span>.
-
 <dt>U+003B SEMICOLON (;)
 <dd>
   <p>Append the <span>current input character</span> to
@@ -477,12 +470,32 @@ initially <i>null</i>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (double-quoted) state</span>.
 
-<dt>Anything else
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)
+<dt>U+0020 SPACE
+<dt>U+003C LESS-THAN SIGN (&lt;)
+<dt>U+0026 AMPERSAND (&amp;)
+<dt>U+003D EQUALS SIGN (=)
+<dt>U+003E GREATER-THAN SIGN (>)
+<dt>U+0022 QUOTATION MARK (&quot;)
+<dt>U+0027 APOSTROPHE (')
+<dt>U+0060 GRAVE ACCENT (`)
+<dt>U+0025 PERCENT SIGN (%)
+<dt>U+0023 NUMBER SIGN (#)
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (double-quoted) state</span>.
   <p>Reconsume the <span>current input character</span>.
+
+<dt><span>Uppercase ASCII letter</span>
+<dt><span>Lowercase ASCII letter</span>
+<dt><span>ASCII digit</span>
+<dt>Anything else
+<dd>
+  <p>Append the <span>current input character</span> to
+  the <span>temporary buffer</span>.
 
 </dl>
 
@@ -492,13 +505,6 @@ initially <i>null</i>.
 
 <dl class=switch>
 
-<dt><span>Uppercase ASCII letter</span>
-<dt><span>Lowercase ASCII letter</span>
-<dt><span>ASCII digit</span>
-<dd>
-  <p>Append the <span>current input character</span> to
-  the <span>temporary buffer</span>.
-
 <dt>U+003B SEMICOLON (;)
 <dd>
   <p>Append the <span>current input character</span> to
@@ -507,12 +513,32 @@ initially <i>null</i>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (single-quoted) state</span>.
 
-<dt>Anything else
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)
+<dt>U+0020 SPACE
+<dt>U+003C LESS-THAN SIGN (&lt;)
+<dt>U+0026 AMPERSAND (&amp;)
+<dt>U+003D EQUALS SIGN (=)
+<dt>U+003E GREATER-THAN SIGN (>)
+<dt>U+0022 QUOTATION MARK (&quot;)
+<dt>U+0027 APOSTROPHE (')
+<dt>U+0060 GRAVE ACCENT (`)
+<dt>U+0025 PERCENT SIGN (%)
+<dt>U+0023 NUMBER SIGN (#)
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value (single-quoted) state</span>.
   <p>Reconsume the <span>current input character</span>.
+
+<dt><span>Uppercase ASCII letter</span>
+<dt><span>Lowercase ASCII letter</span>
+<dt><span>ASCII digit</span>
+<dt>Anything else
+<dd>
+  <p>Append the <span>current input character</span> to
+  the <span>temporary buffer</span>.
 
 </dl>
 
@@ -522,13 +548,6 @@ initially <i>null</i>.
 
 <dl class=switch>
 
-<dt><span>Uppercase ASCII letter</span>
-<dt><span>Lowercase ASCII letter</span>
-<dt><span>ASCII digit</span>
-<dd>
-  <p>Append the <span>current input character</span> to
-  the <span>temporary buffer</span>.
-
 <dt>U+003B SEMICOLON (;)
 <dd>
   <p>Append the <span>current input character</span> to
@@ -537,11 +556,31 @@ initially <i>null</i>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value in entity state</span>.
 
-<dt>Anything else
+<dt>U+0009 CHARACTER TABULATION (tab)
+<dt>U+000A LINE FEED (LF)
+<dt>U+000C FORM FEED (FF)
+<dt>U+0020 SPACE
+<dt>U+003C LESS-THAN SIGN (&lt;)
+<dt>U+0026 AMPERSAND (&amp;)
+<dt>U+003D EQUALS SIGN (=)
+<dt>U+003E GREATER-THAN SIGN (>)
+<dt>U+0022 QUOTATION MARK (&quot;)
+<dt>U+0027 APOSTROPHE (')
+<dt>U+0060 GRAVE ACCENT (`)
+<dt>U+0025 PERCENT SIGN (%)
+<dt>U+0023 NUMBER SIGN (#)
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch to the <span>ENTITY value in entity state</span>.
   <p>Reconsume the <span>current input character</span>.
+
+<dt><span>Uppercase ASCII letter</span>
+<dt><span>Lowercase ASCII letter</span>
+<dt><span>ASCII digit</span>
+<dt>Anything else
+<dd>
+  <p>Append the <span>current input character</span> to
+  the <span>temporary buffer</span>.
 
 </dl>
