--- a/src/tokenizer/charrefs-xml-replace.html
+++ b/src/tokenizer/charrefs-xml-replace.html
@@ -23,7 +23,7 @@
 <dt>The <span>additional allowed character</span>, if there is one
 
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
   <p><span>Flush the temporary buffer</span>.
   <p>Switch back to the <span>original state</span>.
   <p>Reconsume the <span>current input character</span>.
