--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -38,7 +38,7 @@ initially <i>null</i>.
 <dt>U+0020 SPACE
 <dt>U+003F QUESTION MARK (?)<!-- Not in XML5 -->
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=2)</ins>.
   <p>Switch to the <span>bogus comment state</span> with <i>initial
   data</i> "?".
 
@@ -175,7 +175,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
   <p>Set the current token's <i>data</i> to a U+003F QUESTION MARK (?)
   character.
   <p>Switch to the <span>PI data state</span>.
@@ -341,7 +341,7 @@ initially <i>null</i>.
 
 <dt>Anything else
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
   <p>Switch to the <span>DOCTYPE bogus comment state</span>.
 
 </dl>
@@ -440,7 +440,7 @@ initially <i>null</i>.
 
 <dt>U+003E (>)
 <dd>
-  <p><span>Parse error</span>.<!-- Not a parse error in XML5. -->
+  <p><span>Parse error</span> <ins>(offset=2)</ins>.<!-- Not a parse error in XML5. -->
   <p>Switch to the <span>data state</span>.
   <p>Emit the <span>current input character</span> as
   a <span>character token</span>.
