--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -34,8 +34,8 @@
 
 <dt>U+003E GREATER-THAN SIGN (>)
 <dd>
-  <p><span>Parse error</span>.<!-- No error in XML5.  (Parse error
-  in this document to support XML1.) -->
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.<!-- No error in
+  XML5.  (Parse error in this document to support XML1.) -->
   <p>Switch to the <span>data state</span>.
   <p>Emit a U+003C LESS-THAN SIGN character token.
   <p>Reconsume the <span>current input character</span>.
@@ -71,14 +71,15 @@
 <!-- U+003A (:) in XML5 -->
 <dt>EOF
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=2)</ins>.
   <!-- different from XML5 for compat with HTML -->
   <p>Switch to the <span>bogus comment state</span>.
 
 <dt>U+003E GREATER-THAN SIGN (>)
 <dd>
-  <p><span>Parse error</span>.<!-- No error in XML5.  (Parse error
-  in this document for compatibility with XML1.) -->
+  <p><span>Parse error</span> <ins>(offset=2)</ins>.<!-- No error in
+  XML5.  (Parse error in this document for compatibility with XML1.)
+  -->
   <p>Switch to the <span>data state</span>.
   <p>Create a new <span>end tag token</span>.
   <p>Set its <i>tag name</i> to the empty string.
