XML parser errors

--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -485,6 +485,7 @@ initially <i>null</i>.
 <dt>U+0060 GRAVE ACCENT (`)
 <dt>U+0025 PERCENT SIGN (%)
 <dt>U+0023 NUMBER SIGN (#)
+<dt>EOF
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
@@ -528,6 +529,7 @@ initially <i>null</i>.
 <dt>U+0060 GRAVE ACCENT (`)
 <dt>U+0025 PERCENT SIGN (%)
 <dt>U+0023 NUMBER SIGN (#)
+<dt>EOF
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
@@ -571,6 +573,7 @@ initially <i>null</i>.
 <dt>U+0060 GRAVE ACCENT (`)
 <dt>U+0025 PERCENT SIGN (%)
 <dt>U+0023 NUMBER SIGN (#)
+<dt>EOF
 <dd>
   <p><span>Parse error</span>.
   <p><span>Flush the temporary buffer</span>.
