--- a/src/tokenizer/xml-replace.html
+++ b/src/tokenizer/xml-replace.html
@@ -23,7 +23,7 @@
 <!-- U+003A (:) in XML5 -->
 <dt>EOF
 <dd>
-  <p><span>Parse error</span>.
+  <p><span>Parse error</span> <ins>(offset=1)</ins>.
   <p>Emit a U+003C LESS-THAN SIGN (&lt;) character token.
   <p>Switch to the <span>data state</span>.
   <p>Reconsume the <span>current input character</span>.
