XML parser errors

--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -239,6 +239,8 @@ initially <i>null</i>.
 
 <dt>EOF
 <dd>
+  <p>If the <span>stack of open marked sections</span> is not
+  empty, <span>parse error</span>.
   <p>If the parser was originally created as part of the <span>XML
   fragment parsing algorithm</span>, emit an <span>end-of-file
   token</span> and abort these steps.
