--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -198,12 +198,12 @@ initially <i>null</i>.
 <dt>U+003F QUESTION MARK (?)
 <dd>
   <p>Append a U+003F QUESTION MARK character to the current
-  token's <i>data</i>.
+  token's <i>data</i> <ins>(offset=2)</ins>.
 
 <dt>Anything else
 <dd>
   <p>Append a U+003F QUESTION MARK character to the current
-  token's <i>data</i>.<!-- Not in XML5 -->
+  token's <i>data</i> <ins>(offset=2)</ins>.<!-- Not in XML5 -->
   <p>Switch to the <span>PI data state</span>.
   <p>Reconsume the <span>current input character</span>.
 
