simplify temma tokenization rule

--- a/src/tokenizer/temma-replace.html
+++ b/src/tokenizer/temma-replace.html
@@ -15,9 +15,8 @@ those characters and switch to the <span>DOCTYPE state</span>.
 <p>Otherwise, if the next seven characters are a
 <span>case-sensitive</span> match for the string "[CDATA[" (the five
 uppercase letters "CDATA" with a U+005B LEFT SQUARE BRACKET character
-before and after), then: if the <span>stack of open elements</span> is
-empty, <span>parse error</span>; consume those characters; and switch
-to the <span>CDATA section state</span>.
+before and after), then consume those characters and switch to
+the <span>CDATA section state</span>.
 
 <p>Otherwise, this is a <span>parse error</span>. Switch to
 the <span>bogus comment state</span>. The next character that is
