Fixed XML parser (enbugged by previous change on HTML parser)

--- a/src/tokenizer/xml-only.html
+++ b/src/tokenizer/xml-only.html
@@ -160,7 +160,9 @@ initially <i>null</i>.
 <dt>Anything else
 <dd>
   <p><span>Parse error</span> <ins>(offset=1)</ins>.
+  <p>Create a <span>comment token</span> whose data is the empty string.
   <p>Switch to the <span>DOCTYPE bogus comment state</span>.
+  <p>Reconsume the <span>current input character</span>.
 
 </dl>
 
@@ -225,10 +227,10 @@ initially <i>null</i>.
   parse error; consume those characters and switch to
   the <span>ELEMENT state</span>.
 
-  <p>Otherwise, this is a <span>parse error</span>. Switch to
-  the <span>DOCTYPE bogus comment state</span>. The next character
-  that is consumed, if any, is the first character that will be in the
-  comment.
+  <p>Otherwise, this is a <span>parse error</span>.  Create
+  a <span>comment token</span> whose data is the empty string.  Switch
+  to the <span>DOCTYPE bogus comment state</span> (don't consume
+  anything in the current state).
 
 </dl>
 
