Fixed XML parser handling of /> (regression introduced by upstream HTML parser change which was incompatible with our way to define XML parser)

--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -239,6 +239,10 @@
 
 <dl class=switch>
 
+<dt>U+002F SOLIDUS (/)
+<dd>
+  <p>Switch to the <span>self-closing start tag state</span>.
+
 <dt><span>Uppercase ASCII letter</span>
 <dd>
   <p>Start a new attribute in the current tag token.  Set that
