--- a/src/tokenizer/xml-delta.html
+++ b/src/tokenizer/xml-delta.html
@@ -243,6 +243,11 @@
 <dd>
   <p>Switch to the <span>self-closing start tag state</span>.
 
+<dt>U+003E GREATER-THAN SIGN (>)
+<dd>
+  <p>Switch to the <span>data state</span>.
+  <p>Emit the current token.
+
 <dt><span>Uppercase ASCII letter</span>
 <dd>
   <p>Start a new attribute in the current tag token.  Set that
